--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.2"
+    "firebase": "^10.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.0.1"
   }
 }
